crates/mockql-core/src/graphql/snapshots/schema_filter/fragments/mockql_core__graphql__schema_filter__tests__filter_produces_expected_schema_for_operations@fragments__inline_fragment.graphql.snap
---
source: crates/mockql-core/src/graphql/schema_filter.rs
expression: "SCHEMA_FILTER.filter(&content,\noperation_name.as_deref()).expect(\"filter should succeed\")"
input_file: crates/mockql-core/src/graphql/snapshots/schema_filter/fragments/inline_fragment.graphql
---
interface Node {
  id: ID!
  createdAt: String!
}
type Query {
  me: User
}
type Review implements Node {
  body: String
}
"""
The `String` scalar type represents textual data, represented as UTF-8 character sequences. The String type is most often used by GraphQL to represent free-form human-readable text.
"""
scalar String
type User implements Node {
  name: String
  reviews: [Review]
}
